namespace SourceGuild.Domain.Entities;

public class ApplicationUser : IdentityUser<Guid>
{
    public string? FullName { get; set; }

    [Url]
    public string? ProfilePictureUrl { get; set; }

    public ICollection<Course> CreatedCourses { get; set; } = [];
    public ICollection<Enrollment> Enrollments { get; set; } = [];
    public ICollection<Review> Reviews { get; set; } = [];
}