@startuml "SourceGuild Domain Model"
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 12
skinparam packageStyle rectangle
skinparam linetype ortho

skinparam class {
    BackgroundColor #EBF5FB
    BorderColor #2E86C1
    BorderThickness 2
    ArrowColor #154360
}

package "Course Management Aggregate" {
    class Course <<Aggregate Root>> {
        - Id: Guid
        - Title: string
        - Description: string?
        - Price: decimal
        - Status: CourseStatus
        - DurationInWeeks: int?
        - ImageUrl: string?
        - StartDate: DateTime?
        - InstructorId: Guid
        - Categories: List<Category>
        - Sections: List<Section>
        - Enrollments: List<Enrollment>
        - Reviews: List<Review>
        + {static} Create(title, instructorId, price, ...): Result<Course>
        + UpdateDetails(title, description, ...): Result
        + UpdatePrice(price: decimal): Result
        + Publish(): Result
        + Archive(): Result
        + AddCategory(category: Category): void
        + AddSection(title: string): Result<Section>
        + RemoveSection(sectionId: Guid): Result
    }

    class Section <<Entity>> {
        - Id: Guid
        - Title: string
        - Order: int
        - Status: SectionStatus
        - CourseId: Guid
        - Lessons: List<Lesson>
        ~ {static} Create(courseId, title, order): Result<Section>
        ~ SetOrder(newOrder: int): void
        + UpdateTitle(title: string): Result
        + AddLesson(title: string): Result<Lesson>
        + RemoveLesson(lessonId: Guid): Result
    }

    class Lesson <<Entity>> {
        - Id: Guid
        - Title: string
        - Order: int
        - Status: LessonStatus
        - SectionId: Guid
        - ContentBlocks: List<ContentBlock>
        ~ {static} Create(sectionId, title, order): Result<Lesson>
        ~ SetOrder(newOrder: int): void
        + UpdateTitle(title: string): Result
        + AddTextContent(text: string): Result<TextContent>
        + AddVideoContent(url: string, duration: int, ...): Result<VideoContent>
        + RemoveContentBlock(contentBlockId: Guid): Result
    }

    abstract class ContentBlock <<Entity>> {
        - Id: Guid
        - Order: int
        - LessonId: Guid
        - CreatedAt: DateTime
        - UpdatedAt: DateTime
        ~ SetOrder(newOrder: int): void
    }

    class TextContent {
        - Text: string
        ~ {static} Create(lessonId, text, order): Result<TextContent>
        + UpdateText(text: string): Result
    }

    class VideoContent {
        - VideoUrl: string
        - ThumbnailUrl: string?
        - Transcription: string?
        - DurationMinutes: int
        ~ {static} Create(lessonId, url, duration, order, ...): Result<VideoContent>
        + UpdateDetails(url, duration, ...): Result
    }

    Course "1" *-- "0..*" Section : "governs (1..N)"
    Section "1" *-- "0..*" Lesson : "governs (1..N)"
    Lesson "1" *-- "0..*" ContentBlock : "governs (1..N)"
    ContentBlock <|-- TextContent
    ContentBlock <|-- VideoContent
}

package "Enrollment Aggregate" {
    class Enrollment <<Aggregate Root>> {
        - Id: Guid
        - UserId: Guid
        - CourseId: Guid
        - EnrolledAt: DateTime
        - ProgressPercentage: int
        + {static} Create(userId, courseId): Result<Enrollment>
        + UpdateProgress(percentage: int): Result
    }
}

package "Taxonomy Aggregate" {
    class Category <<Aggregate Root>> {
        - Id: Guid
        - Name: string
        - Description: string?
        + {static} Create(name, description): Result<Category>
        + Update(name, description): Result
    }
}

package "Review Aggregate" {
    class Review <<Aggregate Root>> {
        - Id: Guid
        - Rating: byte (1..5)
        - Comment: string?
        - UserId: Guid
        - CourseId: Guid
        + {static} Create(userId, courseId, rating, comment): Result<Review>
        + Update(rating, comment): Result
    }
}

package "Identity Aggregate" {
    class ApplicationUser <<Aggregate Root>> {
        - Id: Guid
        - UserName: string
        - Email: string
        - FullName: string?
        - ProfilePictureUrl: string?
    }
}

Course "0..*" -- "0..*" Category : "categorized in"
ApplicationUser "1" -- "0..*" Course : "teaches"
ApplicationUser "1" -- "0..*" Enrollment : "enrolls"
Course "1" -- "0..*" Enrollment : "has"
ApplicationUser "1" -- "0..*" Review : "writes"
Course "1" -- "0..*" Review : "receives"

@enduml